line break on portfolip page fixed

--- a/src/output.css
+++ b/src/output.css
@@ -603,6 +603,11 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .left-10 {
   left: 2.5rem;
 }
@@ -734,6 +739,10 @@ video {
 
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .grow {
@@ -908,6 +917,14 @@ video {
   gap: 2.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
 .space-x-40 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(10rem * var(--tw-space-x-reverse));
@@ -942,6 +959,18 @@ video {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
+}
+
+.divide-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
+}
+
+.divide-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(4px * var(--tw-divide-x-reverse));
+  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
 .divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -1039,6 +1068,14 @@ video {
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-2 {
@@ -1261,6 +1298,10 @@ video {
     left: -2.5rem;
   }
 
+  .laptop\:-left-24 {
+    left: -6rem;
+  }
+
   .laptop\:hidden {
     display: none;
   }
@@ -1271,6 +1312,21 @@ video {
 
   .laptop\:h-\[100px\] {
     height: 100px;
+  }
+
+  .laptop\:min-h-fit {
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
+
+  .laptop\:min-h-full {
+    min-height: 100%;
+  }
+
+  .laptop\:min-h-min {
+    min-height: -webkit-min-content;
+    min-height: min-content;
   }
 
   .laptop\:w-12 {
@@ -1291,6 +1347,10 @@ video {
 
   .laptop\:max-w-xl {
     max-width: 36rem;
+  }
+
+  .laptop\:max-w-2xl {
+    max-width: 42rem;
   }
 
   @-webkit-keyframes nav3-slide {
@@ -1330,6 +1390,14 @@ video {
     flex-direction: row;
   }
 
+  .laptop\:gap-y-8 {
+    row-gap: 2rem;
+  }
+
+  .laptop\:gap-y-20 {
+    row-gap: 5rem;
+  }
+
   .laptop\:rounded-none {
     border-radius: 0px;
   }
@@ -1360,6 +1428,10 @@ video {
     height: 3.5rem;
   }
 
+  .desktop\:min-h-screen {
+    min-height: 100vh;
+  }
+
   .desktop\:w-14 {
     width: 3.5rem;
   }
@@ -1370,6 +1442,14 @@ video {
 
   .desktop\:max-w-2xl {
     max-width: 42rem;
+  }
+
+  .desktop\:max-w-7xl {
+    max-width: 80rem;
+  }
+
+  .desktop\:max-w-xl {
+    max-width: 36rem;
   }
 
   .desktop\:text-7xl {
